<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ustTrade</string>
    <string name="app_id">502421079870057</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search_page">SearchPage</string>
    <string name="title_activity_sell_option">SellOption</string>
    <string name="chooseCategory"><b>Category</b></string>
    <string name="textTitle"><b>Title</b></string>
    <string name="textPrice"><b>Price</b></string>
    <string name="textQuality"><b>Quality</b></string>
    <string name="textSummary"><b>Summary</b></string>
    <string name="textPeriod"><b>Loan due date</b></string>
    <string name="pick_date"><b>Pick the date</b></string>
    <string name="textDescription"><b>Description</b></string>
    <string name="title_activity_sell_option_submit">SellOptionSubmit</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="radioVeryGood">Very Good</string>
    <string name="radioGood">Good</string>
    <string name="radioFair">Fair</string>
    <string name="radioVeryPoor">Very Poor</string>
    <string name="radioPoor">Poor</string>
    <string name="radioBook">Book</string>
    <string name="radioBedding">Bedding</string>
    <string name="radioFashion">Fashion</string>
    <string name="radioElectronics">Electronics</string>
    <string name="radioCooking">Cooking Utensils</string>
    <string name="radioSport">Sport</string>
    <string name="buttonSports">Sports</string>
    <string name="buttonCooking">Cooking Utensils</string>
    <string name="buttonFashion">Fashion</string>
    <string name="buttonElectronics">Electronics</string>
    <string name="buttonBedding">Bedding</string>
    <string name="buttonBook">Books</string>
    <string name="title_activity_search_books">SearchBooks</string>
    <string name="title_activity_search_fashion">SearchFashion</string>
    <string name="title_activity_search_electronics">SearchElectronics</string>
    <string name="title_activity_show_product">ShowProduct</string>
    <string name="title_activity_lend_option">LendOption</string>
    <string name="title_activity_lend_option_submit">LendOptionSubmit</string>
    <string name="title_activity_create_user">CreateUserActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_create_message">CreateMessageActivity</string>
    <string name="loadPicture">Load Picture</string>
    <string name="title_activity_search_item_exchange">SearchItemExchange</string>
    <string name="title_activity_show_product_exchange">ShowProductExchange</string>
    <string name="Buy">Buy</string>
    <string name="Sell">Sell</string>
    <string name="Lend">Lend</string>
    <string name="Borrow">Borrow</string>
    <string name="MyMessages">My Messages</string>
    <string name="title_activity_fblogin">FBLogin</string>
    <string name="LOGINUSINGUSERNAME">LOGIN USING USERNAME</string>
    <string name="UserName">User Name</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Status">Status</string>
    <string name="ItemDetails">Item Details</string>
    <string name="Submit">Submit</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="main_menu">Menu</string>
    <string name="title_activity_my_profile">MyProfile</string>
    <string name="title_activity_edit_info">EditInfo</string>

</resources>