<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.example.comp.MainActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="232dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >

        <View
            android:layout_width="1dp"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/buyClick"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/blue"
            android:drawableRight="@drawable/buy"
            android:onClick="openSearchResult"
            android:text="@string/Buy" />

        <View
            android:layout_width="1dp"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/sellClick"
            android:layout_width="match_parent"
            android:drawableRight="@drawable/sell"
            android:background="@drawable/blue"
            android:layout_height="75dp"
            android:onClick="sellOption"
            android:text="@string/Sell" />

        <View
            android:layout_width="1dp"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/borrowClick"
            android:layout_width="match_parent"
            android:drawableRight="@drawable/borrow"
            android:layout_height="75dp"
            android:background="@drawable/blue"
            android:onClick="openSearchResult"
            android:text="@string/Borrow" />

        <View
            android:layout_width="1dp"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/lendClick"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:drawableRight="@drawable/lend"
            android:background="@drawable/blue"
            android:onClick="lendOption"
            android:text="@string/Lend" />

        <View
            android:layout_width="1dp"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/checkMsgs"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:drawableRight="@drawable/chat"
            android:background="@drawable/blue"
            android:onClick="showMessages"
            android:text="@string/MyMessages" />
        
    </LinearLayout>

</FrameLayout>