<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.example.usttrade.LoginActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lLoginScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#0000FF"
            android:text="@string/LOGINUSINGUSERNAME"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/lUsername2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#0000FF"
            android:text="@string/UserName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/username2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/lPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#0000FF"
            android:text="@string/Password"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:background="#0000FF"
            android:text="@string/Login" />

        <TextView
            android:id="@+id/lStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Status"
            android:textColor="#0000FF"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/status2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:editable="false"
            android:ems="10" />

    </LinearLayout>

</FrameLayout>

