<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.comp.LendOption"
    tools:ignore="MergeRootFrame" >

	<LinearLayout
            android:layout_width="306dp"
            android:layout_height="440dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/categorytitle"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:text="Item Details"
                android:textSize="25dp" />

            
            <View
                android:layout_width="1dp"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@+string/textTitle" />

            <EditText
                android:id="@+id/itemTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" >

                <requestFocus />
            </EditText>
            
            <View
                android:layout_width="1dp"
                android:layout_height="30dp" >
            </View>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@+string/chooseCategory"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radioBook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioBook" />

                <RadioButton
                    android:id="@+id/radioBedding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioBedding" />

                <RadioButton
                    android:id="@+id/radioSport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioSport" />

                <RadioButton
                    android:id="@+id/radioFashion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioFashion" />

                <RadioButton
                    android:id="@+id/radioCooking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioCooking" />

                <RadioButton
                    android:id="@+id/radioElectronics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioElectronics" />
            </RadioGroup>

            
            
            <View
                android:layout_width="1dp"
                android:layout_height="30dp" />
            
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@+string/textPrice" />

            <EditText
                android:id="@+id/itemPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="in HKD"
                android:inputType="numberDecimal" />

            <View
                android:layout_width="1dp"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@+string/textQuality" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <RadioButton
                        android:id="@+id/radioVeryGood"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radioVeryGood" />

                    <RadioButton
                        android:id="@+id/radioGood"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radioGood" />

                    <RadioButton
                        android:id="@+id/radioFair"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radioFair" />

                    <RadioButton
                        android:id="@+id/radioPoor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radioPoor" />

                    <RadioButton
                        android:id="@+id/radioVeryPoor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radioVeryPoor" />
                </RadioGroup>
            </LinearLayout>
            
            <View
                android:layout_width="1dp"
                android:layout_height="30dp" />

        
             <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@+string/textDescription"
                android:textAppearance="?android:attr/textAppearanceSmall" />

             <EditText
                 android:id="@+id/itemDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="textMultiLine" />

             <View
                 android:layout_width="1dp"
                 android:layout_height="30dp" />

        
             <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@+string/textPeriod"
                android:textAppearance="?android:attr/textAppearanceSmall" />

             
             
             <!-- <ImageView
		        android:id="@+id/imgView"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"></ImageView>
	   	 	 <Button
		        android:id="@+id/buttonLoadPicture"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="0"
		        android:text="Load Picture"
		        android:layout_gravity="center"></Button> -->

             <EditText
                 android:id="@+id/editText1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="date"
                 android:hint="DD/MM/YYYY" />

             <View
                 android:layout_width="1dp"
                 android:layout_height="30dp" />

             <Button
                 android:id="@+id/sellOptionSubmit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:onClick="lendOptionSubmit"
                 android:text="Submit" />
             
        </LinearLayout>
</ScrollView>        