<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFE"
    tools:context="com.example.comp.SellOption"
    tools:ignore="MergeRootFrame" >

    <!--
         <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="534dp" >
    -->

    <LinearLayout
        android:layout_width="306dp"
        android:layout_height="440dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/categorytitle"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:text="Item Details"
            android:textColor="#990000"
            android:textSize="25dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#990000"
            android:text="@+string/textTitle" />

        <EditText
            android:id="@+id/itemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <View
            android:layout_width="1dp"
            android:layout_height="30dp" >
        </View>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@+string/chooseCategory"
            android:textColor="#990000"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radioBook"
                android:textColor="#0000FF" />

            <RadioButton
                android:id="@+id/radioBedding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioBedding"
                android:textColor="#0000FF" />

            <RadioButton
                android:id="@+id/radioSport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioSport"
                android:textColor="#0000FF" />

            <RadioButton
                android:id="@+id/radioFashion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioFashion"
                android:textColor="#0000FF" />

            <RadioButton
                android:id="@+id/radioCooking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioCooking"
                android:textColor="#0000FF" />

            <RadioButton
                android:id="@+id/radioElectronics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioElectronics"
                android:textColor="#0000FF" />
        </RadioGroup>

        <View
            android:layout_width="1dp"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@+string/textPrice"
            android:textColor="#990000" />

        <EditText
            android:id="@+id/itemPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="in HKD"
            android:inputType="numberDecimal" />

        <View
            android:layout_width="1dp"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@+string/textQuality"
            android:textColor="#990000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radioVeryGood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/radioVeryGood"
                    android:textColor="#0000FF" />

                <RadioButton
                    android:id="@+id/radioGood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioGood"
                    android:textColor="#0000FF" />

                <RadioButton
                    android:id="@+id/radioFair"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioFair"
                    android:textColor="#0000FF" />

                <RadioButton
                    android:id="@+id/radioPoor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioPoor"
                    android:textColor="#0000FF" />

                <RadioButton
                    android:id="@+id/radioVeryPoor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioVeryPoor"
                    android:textColor="#0000FF" />
            </RadioGroup>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#990000"
            android:text="@+string/textDescription"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/itemDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textColor="#0000FF" />

        <View
            android:layout_width="1dp"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageTumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxHeight="200dp"
                android:maxWidth="200dp"
                android:scaleType="fitCenter"
                android:src="@+drawable/no_image" />

            <Button
                android:id="@+id/buttonLoadPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.59"
                android:background="@drawable/blue"
                android:text="@string/loadPicture" >
            </Button>
        </LinearLayout>


        <View
            android:layout_width="1dp"
            android:layout_height="30dp" />

        <CheckBox
            android:id="@+id/auction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="setAuctionDate"
            android:text="Auction It" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Auction Ends On"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/aucHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="hh"
                android:enabled="false"
                android:ems="10" />
            
              <EditText
                android:id="@+id/aucMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="mm"
                android:ems="10" />
                        
            <EditText
                android:id="@+id/aucDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="DD"
                android:ems="10" />
            
            <EditText
                android:id="@+id/aucMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="MM"
                android:ems="10" />
            
            <EditText
                android:id="@+id/aucYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="YY"
                android:ems="10" />
            
           
        </LinearLayout>

        <Button
            android:id="@+id/sellOptionSubmit"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.16"
            android:background="@drawable/blue"
            android:onClick="sellOptionSubmit"
            android:text="Submit"
            android:textSize="20dp" />
    </LinearLayout>

</ScrollView>